examples/bad/03-duplicated.tx
var x: Int = 4;
var x: String = "Hello";

fun main(): Void {
    
    return;
}